[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/Objects/Arrow.gd" type="Script" id=1]
[ext_resource path="res://assets/misc/arrow/arrow.png" type="Texture" id=2]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, -4, -1, -4, 1 )

[node name="Arrow" type="RigidBody2D"]
z_index = 100
collision_layer = 32
collision_mask = 9
script = ExtResource( 1 )

[node name="arrow" type="Sprite" parent="."]
position = Vector2( -12.0204, 0 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DissapTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="timeout" from="DissapTimer" to="." method="_on_DissapTimer_timeout"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
